--- a/.github/workflows/ci-old.yml
+++ b/.github/workflows/ci-old.yml
@@ -89,8 +89,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-13, macos-15, ubuntu-24.04, ubuntu-22.04-arm]
-        # os: [macos-15]
+        # os: [macos-13, macos-15, ubuntu-24.04, ubuntu-22.04-arm]
+        os: [macos-15]
         node: [16]
     steps:
 
