--- a/.github/actions/create-test-report/action.yml
+++ b/.github/actions/create-test-report/action.yml
@@ -38,8 +38,8 @@ runs:
             core.exportVariable('test_skipped', report.stats.pending); 
             core.exportVariable('test_failures', Number(report.stats.failures));
             let resultTable = [
-              [{data: 'Passing ✔️', header: true}, {data: 'Failed ❌', header: true}, {data: 'Skipped ➖', header: true}],
-              [report.stats.passes, report.stats.failures, report.stats.pending]
+              [{data: 'Passed ✔️', header: true}, {data: 'Failed ❌', header: true}, {data: 'Skipped ➖', header: true}],
+              [`passed-${report.stats.passes}`, `${report.stats.failures}`, `${report.stats.pending}`]
             ];
             core.summary.addHeading(`Test results`, 4);
             core.summary.addTable(resultTable);
