--- a/.github/actions/create-test-report/action.yml
+++ b/.github/actions/create-test-report/action.yml
@@ -20,7 +20,7 @@ runs:
   using: "composite"
   steps:
 
-    - name: Read mochawesome.json
+    - name: Test report
       uses: actions/github-script@v7
       with:
         result-encoding: string
@@ -29,17 +29,28 @@ runs:
             const fs = require('fs')
             const jsonString = fs.readFileSync('mochawesome.json')
             var report = JSON.parse(jsonString);
+
             // let stats = {
             //     passing: report.stats.passes,
             //     skipped: report.stats.pending,
             //     failures: report.stats.failures
             // };
-            core.exportVariable('test_passing', report.stats.passes);
-            core.exportVariable('test_skipped', report.stats.pending); 
-            core.exportVariable('test_failures', Number(report.stats.failures));
+            // core.exportVariable('test_passing', report.stats.passes);
+            // core.exportVariable('test_skipped', report.stats.pending); 
+            // core.exportVariable('test_failures', Number(report.stats.failures));
+
+            let duration = Number(report.stats.duration) || (report.stats.end - report.stats.start);
+            let time;
+            if(duration < 1000){
+              time = `${duration}ms`;
+            }
+            else{
+              time = `${(duration / 1000).toFixed(3)}s`;
+            }
+
             let resultTable = [
-              [{data: 'Passed ✔️', header: true}, {data: 'Failed ❌', header: true}, {data: 'Skipped ➖', header: true}],
-              [`passed-${report.stats.passes}`, `${report.stats.failures}`, `${report.stats.pending}`]
+              [{data: 'Passed ✔️', header: true}, {data: 'Failed ❌', header: true}, {data: 'Skipped ➖', header: true}, {data: 'Time', header: true}],
+              [`${report.stats.passes}`, `${report.stats.failures}`, `${report.stats.pending}`, `${time}`]
             ];
             core.summary.addHeading(`Test results`, 4);
             core.summary.addTable(resultTable);
@@ -60,42 +71,33 @@ runs:
                   }
                 }
               }
-              core.summary.addHeading(`Test failures`, 3);
+              core.summary.addHeading(`Test failures`, 4);
               core.summary.addTable(failureTable);
             }
             core.summary.write();
-            // const tableData = [
-            //   [{data: 'File', header: true}, {data: 'Suite', header: true}, {data: 'Test', header: true}],
-            //   ['foo.js', 'Pass ✅'],
-            //   ['bar.js', 'Fail ❌'],
-            //   ['test.js', 'Pass ✅']
-            // ]
-            // Add an HTML table
-            // core.summary.addTable([tableData]);
-            // core.summary.write();
-           // core.notice(JSON.stringify(stats));
-            // if(stats.failures > 0) {
-            //   core.setFailed(`There are ${stats.failures} test failures`);
+            if(Number(report.stats.failures) > 0) {
+              core.setFailed(`There are ${report.stats.failures} test failures`);
+            }
           } catch(err) {
             core.error("Error while reading or parsing mochawesome.json")
             core.setFailed(err)
           }
 
-    - name: Output test results
-      shell: bash
-      run: |
-        echo "#### Test results" >> $GITHUB_STEP_SUMMARY
-        echo "| Passing :heavy_check_mark: | Failed :x:     | Skipped :heavy_minus_sign: |" >> $GITHUB_STEP_SUMMARY
-        echo "| -------------------------- | -------------- | -------------------------- |" >> $GITHUB_STEP_SUMMARY
-        echo "| $test_passing              | $test_failures | $test_skipped              |" >> $GITHUB_STEP_SUMMARY
+    # - name: Output test results
+    #   shell: bash
+    #   run: |
+    #     echo "#### Test results" >> $GITHUB_STEP_SUMMARY
+    #     echo "| Passing :heavy_check_mark: | Failed :x:     | Skipped :heavy_minus_sign: |" >> $GITHUB_STEP_SUMMARY
+    #     echo "| -------------------------- | -------------- | -------------------------- |" >> $GITHUB_STEP_SUMMARY
+    #     echo "| $test_passing              | $test_failures | $test_skipped              |" >> $GITHUB_STEP_SUMMARY
 
-        # echo "- Passing tests: $test_passing" >> $GITHUB_STEP_SUMMARY
-        # echo "- Skipped tests: $test_skipped" >> $GITHUB_STEP_SUMMARY
-        # echo "- Failed tests: $test_failures" >> $GITHUB_STEP_SUMMARY
-        if [ $test_failures -gt 0 ]; then
-          echo "##[error]There are $test_failures test failures"
-          exit 1
-        fi
+    #     # echo "- Passing tests: $test_passing" >> $GITHUB_STEP_SUMMARY
+    #     # echo "- Skipped tests: $test_skipped" >> $GITHUB_STEP_SUMMARY
+    #     # echo "- Failed tests: $test_failures" >> $GITHUB_STEP_SUMMARY
+    #     if [ $test_failures -gt 0 ]; then
+    #       echo "##[error]There are $test_failures test failures"
+    #       exit 1
+    #     fi
 
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
@@ -107,11 +109,12 @@ runs:
           mochawesome.json
           mochawesome.html
           assets/
-    # - name: Create test report
-    #   uses: phoenix-actions/test-reporting@v15
-    #   if: success()
-    #   with:
-    #     name: ${{ inputs.name }}-${{ inputs.os }}-node-${{ inputs.node }}
-    #     fail-on-error: true
-    #     path: mochawesome.json   # Path to test results
-    #     reporter: mochawesome-json 
+          
+    - name: Create test report
+      uses: phoenix-actions/test-reporting@v15
+      if: success()
+      with:
+        name: ${{ inputs.name }}-${{ inputs.os }}-node-${{ inputs.node }}
+        fail-on-error: true
+        path: mochawesome.json   # Path to test results
+        reporter: mochawesome-json 
