--- a/.github/actions/create-test-report/action.yml
+++ b/.github/actions/create-test-report/action.yml
@@ -19,15 +19,6 @@ inputs:
 runs:
   using: "composite"
   steps:
-  
-    - name: Create test report
-      uses: phoenix-actions/test-reporting@v15
-      if: success()
-      with:
-        name: ${{ inputs.name }}-${{ inputs.os }}-node-${{ inputs.node }}
-        fail-on-error: true
-        path: mochawesome.json   # Path to test results
-        reporter: mochawesome-json 
 
     - name: Test report
       uses: actions/github-script@v7
@@ -57,9 +48,11 @@ runs:
               time = `${(duration / 1000).toFixed(3)}s`;
             }
 
+            let skipped = report.stats.pending == 0 ? '' : `, ${report.stats.pending} ➖`;
+
             let resultTable = [
-              [{data: 'Passed ✔️', header: true}, {data: 'Failed ❌', header: true}, {data: 'Skipped ➖', header: true}, {data: 'Time', header: true}],
-              [`${report.stats.passes}`, `${report.stats.failures}`, `${report.stats.pending}`, `${time}`]
+              [{data: 'Passed', header: true}, {data: 'Failed', header: true}, {data: 'Skipped', header: true}, {data: 'Time', header: true}],
+              [`${report.stats.passes} ✔️`, `${report.stats.failures} ❌`, `${skipped}`, `${time}`]
             ];
             core.summary.addHeading(`Test results`, 4);
             core.summary.addTable(resultTable);
@@ -82,8 +75,9 @@ runs:
               }
               core.summary.addHeading(`Test failures`, 4);
               core.summary.addTable(failureTable);
-            }
+              core.summary.addCodeBlock('console.log(\'hello world\') \n  ❌ failure', 'bash')
             core.summary.write();
+            }
             if(Number(report.stats.failures) > 0) {
               core.setFailed(`There are ${report.stats.failures} test failures`);
             }
@@ -119,3 +113,11 @@ runs:
           mochawesome.html
           assets/
 
+    # - name: Create test report
+    #   uses: phoenix-actions/test-reporting@v15
+    #   if: success()
+    #   with:
+    #     name: ${{ inputs.name }}-${{ inputs.os }}-node-${{ inputs.node }}
+    #     fail-on-error: true
+    #     path: mochawesome.json   # Path to test results
+    #     reporter: mochawesome-json 
