--- a/.github/actions/create-test-report/action.yml
+++ b/.github/actions/create-test-report/action.yml
@@ -97,9 +97,9 @@ runs:
                   }
               }
               core.summary.addHeading(`Test failures`, 4);
-              for(const name in Object.keys(failures)) {
-                  let failure = failures[name];
-                  core.summary.addHeading(`❌ ${name}`, 5);
+              for(const key in failures) {
+                  let failure = failures[key];
+                  core.summary.addHeading(`❌ ${key}`, 5);
                   core.summary.addCodeBlock(failure.text, 'bash');
               }
               //core.summary.addTable(failureTable);
