testing CI changes

--- a/.github/actions/create-test-report/action.yml
+++ b/.github/actions/create-test-report/action.yml
@@ -58,52 +58,54 @@ runs:
             core.summary.addTable(resultTable);
             if(Number(report.stats.failures) > 0) {
               // core.summary.addBreak();
-              let failureTable = [];
-              failureTable.push([{data: 'File', header: true}, {data: 'Suite', header: true}, {data: 'Test', header: true}]);
-              for (const result of report.results) {
-                for(const suite of result.suites) {
-                    for (const test of suite.tests) {
-                      if (test.fail) {
-                        let file = suite.file?.replaceAll('\\', '/');
-                        if(file?.startsWith('/')) {
-                            file = file.substring(1);
+              // let failureTable = [];
+              // failureTable.push([{data: 'File', header: true}, {data: 'Suite', header: true}, {data: 'Test', header: true}]);
+              // for (const result of report.results) {
+              //   for(const suite of result.suites) {
+              //       for (const test of suite.tests) {
+              //         if (test.fail) {
+              //           let file = suite.file?.replaceAll('\\', '/');
+              //           if(file?.startsWith('/')) {
+              //               file = file.substring(1);
+              //           }
+              //           failureTable.push([file, suite.title, test.title]);
+              //         }
+              //     }
+              //   }
+                let failures = {}
+                if(report.results?.length !== 0 ) {
+                    for (let i = 0; i < report.results.length; i++) {
+                        report.results[i].suites = report.results[i].suites.filter((suite) =>suite.tests.filter((test) => test.fail).length > 0);
+                        for (let j = 0; j < report.results[i].suites.length; j++) {
+                            report.results[i].suites[j].tests = report.results[i].suites[j].tests.filter((test) => test.fail);
+                            report.results[i].suites[j].file = report.results[i].suites[j].file?.replaceAll('\\', '/');
+                            if(report.results[i].suites[j].file?.startsWith('/')) {
+                                report.results[i].suites[j].file = report.results[i].suites[j].file.substring(1);
+                            }
+                            let suite = report.results[i].suites[j];
+                            let name = suite.file && suite.file !== '' ?  suite.file : suite.title;
+                            failures[name] = failures[name] || [];
+                            failures[name].title = failures[name].title || suite.title;
+                            failures[name].text = failures[name].text || suite.title;
+                            for (const test of suite.tests) {
+                              let message = test.err.message;
+                              if(message) {
+                                  message = message.replaceAll('\n', '\n    ');
+                              }
+
+                              failures[name].text += `\n  ❌ ${test.title}\n      ${message}`;
+                            }
                         }
-                        failureTable.push([file, suite.title, test.title]);
-                      }
-                  }
+                    }
                 }
               }
-              let failures = {}
-              if(report.results?.length !== 0 ) {
-                  for (let i = 0; i < report.results.length; i++) {
-                      report.results[i].suites = report.results[i].suites.filter((suite) =>suite.tests.filter((test) => test.fail).length > 0);
-                      for (let j = 0; j < report.results[i].suites.length; j++) {
-                          report.results[i].suites[j].tests = report.results[i].suites[j].tests.filter((test) => test.fail);
-                          report.results[i].suites[j].file = report.results[i].suites[j].file?.replaceAll('\\', '/');
-                          if(report.results[i].suites[j].file?.startsWith('/')) {
-                              report.results[i].suites[j].file = report.results[i].suites[j].file.substring(1);
-                          }
-                          let suite = report.results[i].suites[j];
-                          let name = suite.file && suite.file !== '' ?  suite.file : suite.title;
-                          failures[name] = failures[name] || [];
-                          failures[name].title = failures[name].title || suite.title;
-                          failures[name].text = failures[name].text || suite.title;
-                          for (const test of suite.tests) {
-                              failures[name].text += `\n  ❌ ${test.title}\n     ${test.err.message}`;
-                          }
-
-                      }
-
-                  }
-              }
-              core.summary.addHeading(`Test failures`, 4);
+              // core.summary.addHeading(`Test failures`, 4);
               for(const key in failures) {
                   let failure = failures[key];
                   core.summary.addHeading(`❌ ${key}`, 5);
                   core.summary.addCodeBlock(failure.text, 'bash');
               }
               //core.summary.addTable(failureTable);
-              //core.summary.addCodeBlock('console.log(\'hello world\') \n  ❌ failure', 'bash')
             core.summary.write();
             }
             if(Number(report.stats.failures) > 0) {
