--- a/.github/actions/setup-env/action.yml
+++ b/.github/actions/setup-env/action.yml
@@ -39,12 +39,6 @@ runs:
         path: ~/.cache/node-gyp
         key: '${{ inputs.os }}-${{ runner.arch }}-${{ inputs.node}}'
 
-    # - if: runner.os == 'macOS' && inputs.node == 16
-    #   shell: bash
-    #   name: Add missing packages for macOS NodeJs 16 
-    #   run: |
-    #     brew install python-setuptools --overwrite
-
     - name: Cache node modules
       id: cache-nodemodules
       uses: actions/cache@v4
@@ -67,19 +61,27 @@ runs:
         restore-keys: |
           ${{ inputs.os }}-nuget-
 
+    - if: runner.os == 'macOS' && inputs.node == 16
+      shell: bash
+      name: Add missing packages for macOS NodeJs 16 
+      run: |
+        brew install python-setuptools --overwrite
+
     - name: Setup Mono
       if: runner.os == 'macOS'
       shell: bash
       run: |
         brew install mono --overwrite
         brew reinstall pkg-config
+        brew bundle dump --file ./Brewfile --force
 
-    # - name: Homebrew cache
-    #   uses: actions/cache@v4
-    #   with:
-    #     path: |
-    #       $(brew --prefix)/Cellar
-    #     key: ${{ inputs.os }}-brew-${{ hashFiles('.config/brew/Brewfile') }}
+    - name: Homebrew cache
+      if: runner.os == 'macOS'
+      uses: actions/cache@v4
+      with:
+        path: |
+          $(brew --prefix)/Cellar
+        key: ${{ inputs.os }}-brew-${{ hashFiles('./Brewfile') }}
 
     - name: Setup Mono
       if: runner.os == 'Linux'
