--- a/.github/actions/setup-env/action.yml
+++ b/.github/actions/setup-env/action.yml
@@ -53,9 +53,9 @@ runs:
       uses: actions/cache@v4
       with:
         path: |
-          ~/opt/homebrew/Cellar/mono
-          ~/opt/homebrew/Cellar/pkgconf
-          ~/opt/homebrew/Cellar/python-setuptools
+          $(brew --prefix)/Cellar/mono
+          $(brew --prefix)/Cellar/pkgconf
+          $(brew --prefix)/Cellar/python-setuptools
         # key: brew-${{ inputs.os }}-${{ hashFiles('./Brewfile') }}
         key: brew-${{ inputs.os }}
 
