--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,7 +90,7 @@ jobs:
       matrix:
         # os: [macos-13, macos-15, ubuntu-24.04, ubuntu-22.04-arm, windows-2025, windows-11-arm]
         # node: [18, 20, 22, 24]
-        os: [ubuntu-24.04, macos-13, macos-15]
+        os: [macos-15]
         node: [20]
     steps:
 
