--- a/.github/workflows/ci-old.yml
+++ b/.github/workflows/ci-old.yml
@@ -9,6 +9,7 @@ on:
       - 'performance/*'
       - '.github/FUNDING.YML'
       - '.github/workflows/ci.yml'
+      - '.github/workflows/ci-double.yml'
       - '.github/workflows/build.yml'
       - '.github/workflows/build*.yml'
       - '.github/actions/test-build/action.yml'
@@ -47,6 +48,7 @@ on:
       - 'performance/*'
       - '.github/FUNDING.YML'
       - '.github/workflows/ci.yml'
+      - '.github/workflows/ci-double.yml'
       - '.github/workflows/build.yml'
       - '.github/workflows/build*.yml'
       - '.github/actions/test-build/action.yml'
