--- a/.github/workflows/ci-double.yml
+++ b/.github/workflows/ci-double.yml
@@ -48,7 +48,7 @@ jobs:
         run: ./NUnit.ConsoleRunner.3.20.1/tools/nunit3-console.exe test/double/double_test/bin/Release/net462/double_test.dll --result=test-results.xml
 
       - name: convert test results
-        run: mochawesome-convert --testFile test-results.xml  --testType nunit --reportDir . --reportFilename mochawesome.json
+        run: mochawesome-converter --testFile test-results.xml  --testType nunit --reportDir . --reportFilename mochawesome.json
 
       - name: Test report
         uses: ./.github/actions/create-test-report
