--- a/.github/workflows/ci-double.yml
+++ b/.github/workflows/ci-double.yml
@@ -8,7 +8,6 @@ on:
       - 'test/double/**'
       - 'test/double/double_test/*'
       - 'test/double/double_test/**/*'
-      - 'appveyor_double.yml'
       - 'src/double/Edge.js/dotnet/EdgeJs.cs'
   push:
     paths:
@@ -16,7 +15,6 @@ on:
       - 'test/double/**'
       - 'test/double/double_test/*'
       - 'test/double/double_test/**/*'
-      - 'appveyor_double.yml'
       - 'src/double/Edge.js/dotnet/EdgeJs.cs'
 
 env:
@@ -41,14 +39,14 @@ jobs:
       - name: Install mochawesome-converter
         run: npm install -g mochawesome-converter
 
-      - name: build
+      - name: Build
         run: dotnet build test/double/double_test/double_test.sln --configuration Release
 
-      - name: test
+      - name: Test
         run: ./NUnit.ConsoleRunner.3.20.1/tools/nunit3-console.exe test/double/double_test/bin/Release/net462/double_test.dll --result=test-results.xml
 
-      - name: convert test results
-        run: mochawesome-converter --testFile test-results.xml  --testType nunit --reportDir . --reportFilename mochawesome.json
+      - name: Convert test results
+        run: mochawesome-converter --testFile test-results.xml --testType nunit --reportDir . --reportFilename mochawesome.json
 
       - name: Test report
         uses: ./.github/actions/create-test-report
@@ -56,12 +54,5 @@ jobs:
           node: 22
           os: windows-2025
           test-name: windows-2025-nuget-test-results
-
-      # - name: Upload artifacts
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: windows-2025-nuget-test-results
-      #     path: |
-      #       test-results.xml
 
 
