--- a/.github/workflows/ci-old.yml
+++ b/.github/workflows/ci-old.yml
@@ -12,6 +12,7 @@ on:
       - '.github/workflows/ci-double.yml'
       - '.github/workflows/build.yml'
       - '.github/workflows/build*.yml'
+      - '.github/workflows/publish*.yml'
       - '.github/actions/test-build/action.yml'
       - '.github/actions/build*/*.*'
       - '.github/actions/build/*.*'
@@ -51,6 +52,7 @@ on:
       - '.github/workflows/ci-double.yml'
       - '.github/workflows/build.yml'
       - '.github/workflows/build*.yml'
+      - '.github/workflows/publish*.yml'
       - '.github/actions/test-build/action.yml'
       - '.github/actions/build*/*.*'
       - '.github/actions/build/*.*'
